<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>mygroupid</groupId>
  <artifactId>iso</artifactId>
  <version>0.1-beta</version>
  <dependencies>
      <dependency>
          <groupId>com.formdev</groupId>
          <artifactId>flatlaf-extras</artifactId>
          <version>3.7</version>
      </dependency>
      <dependency>
          <groupId>com.formdev</groupId>
          <artifactId>flatlaf</artifactId>
          <version>3.7</version>
      </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>iso.T2ISO</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>

